--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <h1>RealRAG: Retrieval-augmented Realistic Image Generation via Self-reflective Contrastive Learning</h1>
 
     <div class="image-container">
-        <img src="compare.png" alt="Visual Comparison of RAG Methods">
-        <div class="caption">Visual comparison of RAG methods</div>
+        <img src="fel.png" alt="Training with FEL and evaluation with EL">
+        <div class="caption">Training with FEL and evaluation with EL.</div>
     </div>
 
 </body>
