--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         }
         .image-container {
             margin: 30px auto;
-            max-width: 90%; /* 限制最大宽度 */
-            width: 800px; /* 可选的最大宽度 */
+            max-width: 99%; /* 限制最大宽度 */
+            width: 900px; /* 可选的最大宽度 */
         }
         img {
             width: 100%; /* 图片自适应容器宽度 */
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h1>RealRAG: Retrieval-augmented Realistic Image Generation via Self-reflective Contrastive Learning</h1>
+    <h1>Learning Robust Anymodal Segmentor with Unimodal and Cross-modal Distillation</h1>
 
     <div class="image-container">
         <img src="fel.png" alt="Training with FEL and evaluation with EL">
